overflow fix

--- a/src/styles/global/global.pcss
+++ b/src/styles/global/global.pcss
@@ -4,7 +4,7 @@
 
 body {
   @apply relative flex flex-col justify-center items-center w-screen p-0 m-0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 ul {
